# stalewall-client

./: .gitignore  Cargo.toml  README.md  Stalewall-client.sln  build.bat  build.ps1
src/: main.rs  net.rs
src/Stalewall-Win10/: Program.cs  Stalewall-Win10.csproj
src/StalewallLib/: GetWall.cs  Net.cs  Queries.cs  StalewallLib.csproj  Wallpaper.cs
src/bg/: mod.rs  win.rs
src/windows/: mod.rs
