[package]
name = "stalewall-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
#online = "4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
wallpaper = "3.2.0"
ping = "0.4.1"

[dependencies.windows]
version = "0.44"
features = [
    "System_UserProfile",
    "Foundation",
    "Storage",
    "Storage_Streams",
]

[profile.release]
strip = true
lto = true
codegen-units = 1