[package]
name = "stalewall-client"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
windows = { version = "0.54", features = ["System_UserProfile", "Foundation", "Storage", "Storage_Streams", "Win32_UI_Shell", "Win32_System_Com"] }
clap = { version = "4.5", features = ["derive"] }
online = "4"
anyhow = "1"

[profile.release]
strip = true
lto = true
opt-level = 3
